complete create/delete functionality

--- a/src/components/todo-list/TodoList.css
+++ b/src/components/todo-list/TodoList.css
@@ -6,4 +6,15 @@ ul {
   padding: 15px;
   border-radius: 12px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25), 0 2px 5px rgba(0, 0, 0, 0.22);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.loader-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
