--- a/src/components/todo/Todo.css
+++ b/src/components/todo/Todo.css
@@ -1,4 +1,5 @@
 li {
+  width: 100%;
   height: 60px;
   display: flex;
   align-items: center;
@@ -24,14 +25,27 @@ li span {
 li button {
   height: 30px;
   width: 70px;
-  background: rgb(255, 96, 96);
   border-radius: 12px;
   color: white;
   border: none;
   transition: all 0.25s ease-in-out;
 }
 
-li button:hover {
+li button.edit {
+  background: rgb(13, 115, 238);
+  margin-right: 5px;
+}
+
+li button.edit:hover {
+  background: red;
+  cursor: pointer;
+}
+
+li button.remove {
+  background: rgb(255, 96, 96);
+}
+
+li button.remove:hover {
   background: red;
   cursor: pointer;
 }
